@@ -1,3 +1,10 @@
+2004-07-21  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #274]
+	* stdlib/strtod_l.c (INTERNAL (__STRTOF)): Fix used >=
+	BITS_PER_MP_LIMB shifting up.
+	* stdlib/tst-strtod.c (main): Add new tests.
+
 2004-07-23  Jakub Jelinek  <jakub@redhat.com>
 
 	[BZ #282]
